--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NanoTrust - On-Chain Yield Infrastructure</title>
-    <meta name="description" content="NanoTrust - Powered by Venus Protocol Integration">
+    <title>NanoTrust - Decentralized Yield Infrastructure</title>
+    <link rel="icon" type="image/svg+xml" href="images/logo.svg">
+    <meta name="description" content="Powered by Venus Protocol Integration">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
