--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>NanoTrust - Decentralized Yield Infrastructure</title>
-    <link rel="icon" type="image/svg+xml" href="images/logo.svg">
     <meta name="description" content="Powered by Venus Protocol Integration">
+
+    <link rel="icon" type="image/svg+xml" href="https://nanotether.com/images/logo.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://nanotether.com/images/logo.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://nanotether.com/images/logo.png">
+    <link rel="apple-touch-icon" href="https://nanotether.com/images/logo.png">
+
+    <link rel="manifest" href="/manifest.json">
+
+    <meta property="og:title" content="NanoTrust">
+    <meta property="og:description" content="Decentralized Yield Infrastructure">
+    <meta property="og:image" content="https://nanotether.com/images/logo.png">
+    <meta property="og:type" content="website">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
