--- a/index.html
+++ b/index.html
@@ -975,9 +975,9 @@
                 </div>
                 <p style="color: var(--text-muted); font-size: 0.875rem;">Secure, Transparent and Fully On-Chain DeFi Platform Powered by Venus Protocol</p>
                 <div class="footer__social">
+                    <a href="#" class="social-link" title="WhatsApp" target="_blank"><i class="fab fa-whatsapp"></i></a>
                     <a href="#" class="social-link" title="Telegram"><i class="fab fa-telegram"></i></a>
                     <a href="#" class="social-link" title="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="https://bscscan.com/address/0x0d00583f6E99e1370e2DB18a7239C2a18eb7065F" class="social-link" title="BSCScan" target="_blank"><i class="fas fa-file-contract"></i></a>
                 </div>
                 <div class="contract-badge" style="margin-top: 0.5rem;">
                     <i class="fas fa-shield-alt"></i>
