--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
             <div class="contract-badge">
                 <i class="fas fa-shield-alt"></i>
                 <span>Contract:</span>
-                <a href="https://bscscan.com/address/0x0d00583f6E99e1370e2DB18a7239C2a18eb7065F" target="_blank">
-                    0x0d...065F
+                <a href="https://bscscan.com/address/0xd10690c03047703cc958e0cbfebe4c5168ec7bb5#code" target="_blank">
+                    0xd1...7bb5
                 </a>
                 <i class="fas fa-external-link-alt" style="font-size: 0.625rem;"></i>
             </div>
@@ -936,7 +936,7 @@
                                 • SafeERC20 for secure token transfers<br>
                                 • Only EOA (Externally Owned Account) restriction for investments<br><br>
                                 The contract is verified on BSCScan. However, as with any DeFi protocol, users should understand the risks involved and only invest what they can afford to lose.<br><br>
-                                <strong>Contract Address:</strong> 0x0d00583f6E99e1370e2DB18a7239C2a18eb7065F
+                                <strong>Contract Address:</strong> 0xd10690c03047703CC958E0cBfeBe4C5168Ec7bb5
                             </div>
                         </div>
                     </div>
@@ -981,8 +981,8 @@
                 <div class="contract-badge" style="margin-top: 0.5rem;">
                     <i class="fas fa-shield-alt"></i>
                     <span>Contract:</span>
-                    <a href="https://bscscan.com/address/0x0d00583f6E99e1370e2DB18a7239C2a18eb7065F" target="_blank">
-                        0x0d...065F
+                    <a href="https://bscscan.com/address/0xd10690c03047703cc958e0cbfebe4c5168ec7bb5#code" target="_blank">
+                        0xd1...7bb5
                     </a>
                     <i class="fas fa-external-link-alt" style="font-size: 0.625rem;"></i>
                 </div>
