--- a/index.html
+++ b/index.html
@@ -974,9 +974,9 @@
                 </div>
                 <p style="color: var(--text-muted); font-size: 0.875rem;">Secure, Transparent and Fully On-Chain DeFi Platform Powered by Venus Protocol</p>
                 <div class="footer__social">
-                    <a href="#" class="social-link" title="WhatsApp" target="_blank"><i class="fab fa-whatsapp"></i></a>
-                    <a href="#" class="social-link" title="Telegram"><i class="fab fa-telegram"></i></a>
-                    <a href="#" class="social-link" title="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://whatsapp.com/channel/0029Vb7QrA58KMqtsWfOWL2C" class="social-link" title="WhatsApp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://t.me/NanoTether" class="social-link" title="Telegram"><i class="fab fa-telegram"></i></a>
+                    <a href="https://x.com/NanoTether" class="social-link" title="Twitter"><i class="fab fa-twitter"></i></a>
                 </div>
                 <div class="contract-badge" style="margin-top: 0.5rem;">
                     <i class="fas fa-shield-alt"></i>
