--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
                 </div>
                 <p style="color: var(--text-muted); font-size: 0.875rem;">Secure, Transparent and Fully On-Chain DeFi Platform Powered by Venus Protocol</p>
                 <div class="footer__social">
-                    <a href="https://t.me/NanoTether" class="social-link" title="Telegram">Telegram<i class="fab fa-telegram"></i></a>
+                    <a href="https://t.me/NanoTether" class="social-link" title="Telegram"><i class="fab fa-telegram"></i></a>
                 </div>
                 <div class="contract-badge" style="margin-top: 0.5rem;">
                     <i class="fas fa-shield-alt"></i>
